[package]
name = "esteria-api-client"
version = "0.0.16"
edition = "2024"
description = "A Rust-based client library for sending SMS messages via the Esteria API"
license = "GPL-3.0-only"

[dependencies]
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json", "query"] }
thiserror = "2.0.18"
bitflags = "2.11.1"
log = "0.4.29"
env_logger = "0.11.10"
tokio = { version = "1.52.0", features = ["full"] }

clap = { version = "4.6.0", features = ["derive", "env"], optional = true }

pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"], optional = true }

[lib]
name = "esteria_api_client"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "esteria-api-client"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
python = ["pyo3", "pyo3-async-runtimes"]
cli = ["clap"]

[dev-dependencies]
httpmock = "0.8.3"


[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = "z"
strip = true
