[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "esteria-api-client"
version = "0.0.1"
description = "A Rust client library for Esteria API with Python bindings"
authors = [
    { name = "Olegs Korsaks", email = "bixority@gmail.com" }
]
license-files = [ "LICENSE" ]
readme = "README.md"
requires-python = "==3.14.0"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "maturin>=1.9.6",
]

